2007-02-19  Akim Demaille  <akim.demaille@free.fr>

	Get rid of buffers
	* src/uvariablename.hh, src/uvariablename.cc (build_from_str): New.
	(buildFullname): Use it.
	Don't use static buffers.
	Factor and try to be readable.

2007-02-19  Akim Demaille  <akim.demaille@free.fr>

	Factor a bit UVariableName
	This code is really hard to follow, and Aibo crashes somewhere here
	(apparently, but it is hard to track).
	* src/uvariablename.hh, src/uvariablename.cc (set_fullname): New.
	(prefix, suffix): New.
	Use it.
	Prefer strlcpy to strncpy (I'll worry about portability later).
	Instrument for ECHO etc. but do not activate.
	Shorten some scopes.

2007-02-19  Akim Demaille  <akim.demaille@free.fr>

	update UString
	* src/ustring.hh (update): New.
	Hopefully, should disapear in the future, together with UStrings.

2007-02-19  Akim Demaille  <akim.demaille@free.fr>

	Use libport::m?has
	* src/ucommand.cc, src/uvariablename.cc: Here.

2007-02-18  Akim Demaille  <akim.demaille@free.fr>

	Fix signature
	* src/uvariable.hh: Add missing inline.
	* src/uvariable.cc (UVariable::print): here.

2007-02-18  Akim Demaille  <akim.demaille@free.fr>

	UVariable::print
	* src/uvariable.hh, src/uvariable.cc (UVariable::print)
	(operator<< (ostream, UVariable): New.

2007-02-18  Akim Demaille  <akim.demaille@free.fr>

	unic("PREFIX")
	* src/userver.hh, src/userver.cc (URBI_unicID): Now a static
	variable of...
	(uniq()): this.
	(unic(const char*)): New.
	* src/ucommand.cc: Use it instead of unic().
	(copy): Get rid of the ret temp var when we can.

2007-02-18  Akim Demaille  <akim.demaille@free.fr>

	Factor loops
	* src/uexpression.cc (UExpression::eval_FUNCTION): Factor two
	while loops ending both branches of an if.

2007-02-17  Akim Demaille  <akim.demaille@free.fr>

	* src/uexpression.cc (to_string): New, for UExpression::Type.

2007-02-17  Akim Demaille  <akim.demaille@free.fr>

	Adjust to *maps becoming SingletonPtr
	* src/ucommand.cc, src/uobj.cc, src/userver.cc, src/uvar.cc,