@@ -1,5 +1,10 @@
 2007-02-19  Akim Demaille  <akim.demaille@free.fr>
 
+	More UString operators
+	* src/ustring.hh (operator!=): New.
+
+2007-02-19  Akim Demaille  <akim.demaille@free.fr>
+
 	Get rid of buffers
 	* src/uvariablename.hh, src/uvariablename.cc (build_from_str): New.
 	(buildFullname): Use it.
